# Process this file with autoconf to produce a configure script.
AC_INIT([libmyrt], [1.0], [voica@mail.desy.de])
AM_INIT_AUTOMAKE([libmyrt], [1.0])
AC_PREFIX_DEFAULT(${HOME})

# Checks for programs.
AC_PROG_F77
AC_PROG_CPP
AC_PROG_RANLIB

# Output
AC_CONFIG_FILES([src/Makefile
                 Makefile])
AC_OUTPUT
